[gd_scene load_steps=9 format=3 uid="uid://bhm2hwrbyr14h"]

[ext_resource type="Texture2D" uid="uid://mwjxc6goor4m" path="res://block_resources/block_textures/dirt.png" id="1_38qci"]
[ext_resource type="Script" path="res://object_scenes/ground_item/ground_item.gd" id="1_vgw6l"]
[ext_resource type="Shader" path="res://object_scenes/ground_item/dropShadow.gdshader" id="3_3fwy6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_husnc"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tnyss"]
radius = 8.06226

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwjl3"]
size = Vector2(6, 6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0vp2o"]
shader = ExtResource("3_3fwy6")
shader_parameter/color = Color(0.0156863, 0.0156863, 0.0588235, 0.384314)
shader_parameter/width = 1.333
shader_parameter/pattern = 2
shader_parameter/inside = true
shader_parameter/add_margins = true

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_645kq"]
blend_mode = 1

[node name="GroundItem" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_vgw6l")

[node name="stack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="stack"]
shape = SubResource("CircleShape2D_husnc")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_tnyss")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lwjl3")

[node name="textureRoot" type="Node2D" parent="."]

[node name="back" type="Sprite2D" parent="textureRoot"]
modulate = Color(0.415686, 0.415686, 0.678431, 1)
show_behind_parent = true
position = Vector2(-1, 1)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_38qci")

[node name="texture" type="Sprite2D" parent="textureRoot"]
clip_children = 2
material = SubResource("ShaderMaterial_0vp2o")
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_38qci")

[node name="tint" type="ColorRect" parent="textureRoot/texture"]
material = SubResource("CanvasItemMaterial_645kq")
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
offset_bottom = 8.0
color = Color(0.227451, 0.0470588, 0.207843, 0)

[connection signal="body_entered" from="stack" to="." method="_on_stack_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
